--- a/ProjectoSAD/App.config
+++ b/ProjectoSAD/App.config
@@ -17,5 +17,8 @@
   <add name="ProjectoSAD.Properties.Settings.DecisionsWorkflowConnectionString"
    connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=DecisionsWorkflow;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
    providerName="System.Data.SqlClient" />
+  <add name="ProjectoSAD.Properties.Settings.sad_dwfConnectionString"
+   connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=sad_dwf;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
  </connectionStrings>
 </configuration>
