--- a/ProjectoSAD/ProjectoSAD.csproj
+++ b/ProjectoSAD/ProjectoSAD.csproj
@@ -92,6 +92,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SAD_DWF.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SAD_DWF.dbml</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Forms\ListaProjectos.resx">
       <DependentUpon>ListaProjectos.cs</DependentUpon>
     </EmbeddedResource>
@@ -125,6 +130,14 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="SAD_DWF.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>SAD_DWF.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="SAD_DWF.dbml.layout">
+      <DependentUpon>SAD_DWF.dbml</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
