--- a/ProjectoSAD/App.config
+++ b/ProjectoSAD/App.config
@@ -14,11 +14,15 @@
   </entityFramework>
 	<connectionStrings>
   <add name="baseDeDados" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=DecisionsWorkflow;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
-  <add name="ProjectoSAD.Properties.Settings.DecisionsWorkflowConnectionString"
-   connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=DecisionsWorkflow;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
-   providerName="System.Data.SqlClient" />
-  <add name="ProjectoSAD.Properties.Settings.sad_dwfConnectionString"
-   connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=sad_dwf;Integrated Security=True"
-   providerName="System.Data.SqlClient" />
+  <add name="ProjectoSAD.Properties.Settings.DecisionsWorkflowConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=DecisionsWorkflow;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
+  <add name="ProjectoSAD.Properties.Settings.sad_dwfConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=sad_dwf;Integrated Security=True" providerName="System.Data.SqlClient" />
  </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
