--- a/ProjectoSAD/ProjectoSAD.csproj
+++ b/ProjectoSAD/ProjectoSAD.csproj
@@ -97,12 +97,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\DataClasses1.designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataClasses1.dbml</DependentUpon>
-    </Compile>
-    <Compile Include="Data\GetTables.cs" />
     <Compile Include="Forms\ListaEstudantes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,21 +117,22 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SAD_DWF.designer.cs">
+    <Compile Include="Data\SAD_DWF.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>SAD_DWF.dbml</DependentUpon>
     </Compile>
-    <Compile Include="sad_dwfDataSet.Designer.cs">
+    <Compile Include="Data\sad_dwfDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>sad_dwfDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="sad_dwfDataSet1.Designer.cs">
+    <Compile Include="Data\sad_dwfDataSet1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>sad_dwfDataSet1.xsd</DependentUpon>
     </Compile>
+    <Compile Include="UserData\CurrentUser.cs" />
     <EmbeddedResource Include="Forms\ListaEstudantes.resx">
       <DependentUpon>ListaEstudantes.cs</DependentUpon>
     </EmbeddedResource>
@@ -156,14 +151,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="Data\DataClasses1.dbml">
-      <Generator>MSLinqToSQLGenerator</Generator>
-      <LastGenOutput>DataClasses1.designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Data\DataClasses1.dbml.layout">
-      <DependentUpon>DataClasses1.dbml</DependentUpon>
-    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -174,34 +161,34 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="SAD_DWF.dbml">
+    <None Include="Data\SAD_DWF.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>SAD_DWF.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="SAD_DWF.dbml.layout">
+    <None Include="Data\SAD_DWF.dbml.layout">
       <DependentUpon>SAD_DWF.dbml</DependentUpon>
     </None>
-    <None Include="sad_dwfDataSet.xsc">
+    <None Include="Data\sad_dwfDataSet.xsc">
       <DependentUpon>sad_dwfDataSet.xsd</DependentUpon>
     </None>
-    <None Include="sad_dwfDataSet.xsd">
+    <None Include="Data\sad_dwfDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>sad_dwfDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="sad_dwfDataSet.xss">
+    <None Include="Data\sad_dwfDataSet.xss">
       <DependentUpon>sad_dwfDataSet.xsd</DependentUpon>
     </None>
-    <None Include="sad_dwfDataSet1.xsc">
+    <None Include="Data\sad_dwfDataSet1.xsc">
       <DependentUpon>sad_dwfDataSet1.xsd</DependentUpon>
     </None>
-    <None Include="sad_dwfDataSet1.xsd">
+    <None Include="Data\sad_dwfDataSet1.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>sad_dwfDataSet1.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="sad_dwfDataSet1.xss">
+    <None Include="Data\sad_dwfDataSet1.xss">
       <DependentUpon>sad_dwfDataSet1.xsd</DependentUpon>
     </None>
   </ItemGroup>
