--- a/ProjectoSAD/packages.config
+++ b/ProjectoSAD/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CsvHelper" version="27.2.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="MaterialSkin" version="0.2.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net472" />
