--- a/ProjectoSAD/App.config
+++ b/ProjectoSAD/App.config
@@ -13,9 +13,9 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-  <add name="baseDeDados" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=DecisionsWorkflow;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
-  <add name="ProjectoSAD.Properties.Settings.DecisionsWorkflowConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=DecisionsWorkflow;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
-  <add name="ProjectoSAD.Properties.Settings.sad_dwfConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=sad_dwf;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="ProjectoSAD.Properties.Settings.decisions_workflowConnectionString"
+   connectionString="Data Source=DESKTOP\SQLEXPRESS02;Initial Catalog=decisions_workflow;User ID=dwf;Password=123;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
+   providerName="System.Data.SqlClient" />
  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
