--- a/ProjectoSAD/ProjectoSAD.csproj
+++ b/ProjectoSAD/ProjectoSAD.csproj
@@ -99,8 +99,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\sad_dwfDataSet.cs">
-      <DependentUpon>sad_dwfDataSet.xsd</DependentUpon>
+    <Compile Include="Data\dwf.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dwf.dbml</DependentUpon>
+    </Compile>
+    <Compile Include="Data\dwfDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dwfDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Forms\InserirProjectos\InserirProjeto.cs">
       <SubType>Form</SubType>
@@ -156,16 +163,6 @@
     <Compile Include="Models\WeightedAttribute.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Data\SAD_DWF.designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>SAD_DWF.dbml</DependentUpon>
-    </Compile>
-    <Compile Include="Data\sad_dwfDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>sad_dwfDataSet.xsd</DependentUpon>
-    </Compile>
     <Compile Include="UserData\CurrentUser.cs" />
     <EmbeddedResource Include="Forms\InserirProjectos\InserirProjeto.resx">
       <DependentUpon>InserirProjeto.cs</DependentUpon>
@@ -192,6 +189,25 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>SADDWF.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="Data\dwf.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>dwf.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Data\dwf.dbml.layout">
+      <DependentUpon>dwf.dbml</DependentUpon>
+    </None>
+    <None Include="Data\dwfDataSet.xsc">
+      <DependentUpon>dwfDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Data\dwfDataSet.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>dwfDataSet.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Data\dwfDataSet.xss">
+      <DependentUpon>dwfDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Models\SADDWF.edmx.diagram">
       <DependentUpon>SADDWF.edmx</DependentUpon>
     </None>
@@ -205,25 +221,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="Data\SAD_DWF.dbml">
-      <Generator>MSLinqToSQLGenerator</Generator>
-      <LastGenOutput>SAD_DWF.designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Data\SAD_DWF.dbml.layout">
-      <DependentUpon>SAD_DWF.dbml</DependentUpon>
-    </None>
-    <None Include="Data\sad_dwfDataSet.xsc">
-      <DependentUpon>sad_dwfDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="Data\sad_dwfDataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>sad_dwfDataSet.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Data\sad_dwfDataSet.xss">
-      <DependentUpon>sad_dwfDataSet.xsd</DependentUpon>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
