--- a/ProjectoSAD/ProjectoSAD.csproj
+++ b/ProjectoSAD/ProjectoSAD.csproj
@@ -102,6 +102,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Aluno.cs" />
+    <Compile Include="Classes\ManageProjects.cs" />
     <Compile Include="Data\dwf.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
