AHP - Edição de atributos

--- a/ProjectoSAD/App.config
+++ b/ProjectoSAD/App.config
@@ -13,7 +13,7 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="ProjectoSAD.Properties.Settings.decisions_workflowConnectionString" connectionString="Data Source=DESKTOP\SQLEXPRESS02;Initial Catalog=decisions_workflow;User ID=dwf;Password=123;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
+	<add name="ProjectoSAD.Properties.Settings.decisions_workflowConnectionString" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=decisions_workflow;User ID=sa;Password=123;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
     <!--<add name="ProjectoSAD.Properties.Settings.decisions_workflowConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog = decisions_workflow;Integrated Security=True;Connect Timeout=30" />-->
  </connectionStrings>
   <runtime>
